# DRF

./: .gitignore  payment.json  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  service.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
