[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Maxim Talancev <maxtalwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
ipython = "^8.27.0"
apiview = "^1.3.25"
response = "^0.5.0"
drf-yasg = "^1.21.7"
setuptools = "^74.1.2"
coreapi = "^2.3.3"
decorators = "^2.0.7"
stripe = "^10.10.0"
eventlet = "^0.36.1"
redis = "^5.0.8"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
